[package]
name = "rust-microservice"
version = "0.1.0"
authors = ["Omar Jair Purata Funes <omarpurataf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.2"
futures = "0.1.28"
hyper = "0.12.33"
log = "0.4.8"
